<?xml version="1.0"?>
<package format="2">
  <name>multicam_tools</name>
  <version>0.0.0</version>
  <description>tools for multicamera tests and visualization</description>

  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>eigen_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>
</package>
